--- a/stocks.html
+++ b/stocks.html
@@ -5,7 +5,7 @@
 <script src="stockWidget.js"></script>
 </head> 
 <body> 
-<div id='stocks'></div> 
+<div id='stockWidget'></div> 
 </script>
 </body>
 </html>
